# ElectricFieldSimulation

./: CMakeLists.txt  README.md  coordinatesdialog.cpp  coordinatesdialog.h  coordinatesdialog.ui  simulation.cpp  simulation.h  window.cpp  window.h  window.ui
